# src/main/java/com/elior/suivicargo/dtos/CargaisonDto.java
@@ -14,6 +14,10 @@ public record CargaisonDto(
         String clientTelephone,
         Long conteneurId,
         String conteneurNumero,
+        Long voyageId,
+        String voyageNavireNom,
+        String voyagePortDepart,
+        String voyagePortArrivee,
         Integer nombreColis,
         BigDecimal poidsKg,
         BigDecimal volumeM3,
